[project]
name = "arbundler"
version = "0.4.0"
description = ""
authors = [{ name = "Yolley", email = "Yolley@users.noreply.github.com" }]
requires-python = ">=3.11,<3.14"
readme = "README.md"
dependencies = [
    "anyio>=4",
    "cryptography>=43.0.3",
    "furl>=2.1.4",
    "httpx<1,>=0",
    "msgspec<1,>=0.18.4",
    "pyjwt[crypto]>=2.9.0",
]

[dependency-groups]
dev = [
    "deptry>=0",
    "ipython>=9",
    "mypy>=1",
    "ruff>=0",
    "ty>=0.0.29",
]

[tool.hatch.build.targets.sdist]
include = ["arbundler"]

[tool.hatch.build.targets.wheel]
include = ["arbundler"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 120
exclude = [".git", "__pycache__", "__init__.py", ".mypy_cache", ".pytest_cache"]

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I", "N", "UP", "ASYNC", "B", "COM", "C4", "PT"]
ignore = ["COM812", "D203", "D212"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["arbundler"]
